--- a/app/src/main/res/layout/forum_post_suggestion_type_tag.xml
+++ b/app/src/main/res/layout/forum_post_suggestion_type_tag.xml
@@ -9,7 +9,7 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="130dp"
+        android:layout_width="140dp"
         android:layout_height="35dp"
         app:cardCornerRadius="5dp"
         app:cardBackgroundColor="@color/colorPrimary">
@@ -25,14 +25,14 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#E9053A">
+                android:background="#F5C23A">
 
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/newquestionicon"
-                    android:padding="6dp"
-                    android:tint="@color/white"/>
+                    android:src="@drawable/iconfinder_idea"
+                    android:padding="4dp"
+                    android:tint="@color/colorPrimary"/>
 
             </LinearLayout>
             <LinearLayout
@@ -45,7 +45,7 @@
                     android:layout_height="match_parent"
                     android:fontFamily="@font/opensanssemibold"
                     android:gravity="center"
-                    android:text="QUESTION"
+                    android:text="Suggestion"
                     android:textColor="@color/white"
                     android:textSize="14dp" />
             </LinearLayout>
