--- a/deltastreamedittextcontroller/src/main/res/layout/editor_layout.xml
+++ b/deltastreamedittextcontroller/src/main/res/layout/editor_layout.xml
@@ -50,6 +50,16 @@
                 android:tint="#000000"
                 android:layout_marginLeft="10dp"
                 android:background="@drawable/transparent_background"
+                android:id="@+id/size_increase_action"
+                android:src="@drawable/ic_action_strike"/>
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:scaleType="fitXY"
+                android:tint="#000000"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/transparent_background"
                 android:id="@+id/link_action"
                 android:src="@drawable/ic_action_link"/>
 
