--- a/deltastreamedittextcontroller/src/main/res/values/attrs.xml
+++ b/deltastreamedittextcontroller/src/main/res/values/attrs.xml
@@ -14,6 +14,7 @@
         <attr name="setLinkActionSrc" format="reference"/>
         <attr name="setBulletActionSrc" format="reference"/>
         <attr name="setNumberActionSrc" format="reference"/>
+        <attr name="setSizeIncActionSrc" format="reference"/>
         <attr name="setSelectedActionBackground" format="reference"/>
         <attr name="setUnselectedActionBackground" format="reference"/>
         <attr name="setActionButtonPadding" format="dimension|reference"/>
