--- a/app/src/main/res/layout/forum_post_recycler_item_type_suggestion.xml
+++ b/app/src/main/res/layout/forum_post_recycler_item_type_suggestion.xml
@@ -89,11 +89,11 @@
             android:layout_height="wrap_content"
             android:textSize="17dp"
             android:textColor="@color/black"
+            android:id="@+id/forum_post_recycler_item_suggestion_textview"
             android:text="@string/large_text"
             android:fontFamily="@font/airreg"
             android:layout_marginTop="5dp"
-            android:lineSpacingExtra="6dp"
-            tools:targetApi="o" />
+            android:lineSpacingExtra="6dp" />
 
 
         <RelativeLayout
