--- a/app/src/main/res/layout/messaging_area_picture_select_item.xml
+++ b/app/src/main/res/layout/messaging_area_picture_select_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.estello.android.splashscreen.Model.GridViewItem xmlns:android="http://schemas.android.com/apk/res/android"
+<com.estello.android.ViewModel.GridViewItem xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
