--- a/app/src/main/res/layout/messaging_area_bottomsheet.xml
+++ b/app/src/main/res/layout/messaging_area_bottomsheet.xml
@@ -83,6 +83,7 @@
                         android:scrollbars="vertical"
                         android:scrollbarSize="3dp"
                         android:layout_marginTop="3dp"
+                        android:textColorHighlight="#10464ed3"
                         android:id="@+id/bottom_sheet_edittext"
                         android:textSize="16dp"
                         android:lineSpacingExtra="4dp"
