--- a/deltastreamedittextcontroller/src/main/res/values/colors.xml
+++ b/deltastreamedittextcontroller/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="yellow">#FF9800</color>
     <color name="dark_text_color">#3C3A3A</color>
     <color name="light_text_color">#7A7A7A</color>
+    <color name="new_dark_text_color">#0C0C0C</color>
     <color name="mtrl_textinput_default_box_stroke_color" tools:ignore="PrivateResource">#c8c8c8</color>
     <color name="hashtag_color">#FF2196F3</color>
     <color name="mention_color">#fa2d65</color>
