--- a/app/src/main/res/layout/forum_post_recyler_item.xml
+++ b/app/src/main/res/layout/forum_post_recyler_item.xml
@@ -84,15 +84,15 @@
              android:textSize="14dp" />
 
          <com.deltastream.example.edittextcontroller.RTextView
+             android:id="@+id/forum_post_recycler_item_textview"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
-             android:textSize="17dp"
-             android:textColor="@color/black"
-             android:id="@+id/forum_post_recycler_item_textview"
-             android:text="@string/large_text"
-             android:fontFamily="@font/airreg"
              android:layout_marginTop="10dp"
-             android:lineSpacingExtra="6dp"/>
+             android:fontFamily="@font/airreg"
+             android:lineSpacingExtra="6dp"
+             android:text="@string/large_text"
+             android:textColor="#0C0C0C"
+             android:textSize="17dp" />
 
 
          <com.estello.android.ViewModel.RichLinkView.RichLinkView
