--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,5 +25,6 @@
     <color name="toolbar_light_primary">#F8E7DFFD</color>
     <color name="semi_light_primary">#284A154B</color>
     <color name="white_transparency">#D9FFFFFF</color>
+    <color name="blue">#465ED3</color>
 </resources>
 
