--- a/app/src/main/res/layout/activity_hashtags_bottomsheet.xml
+++ b/app/src/main/res/layout/activity_hashtags_bottomsheet.xml
@@ -2,14 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ctr="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:layout_behavior="com.estello.android.ViewModel.LockableBottomSheetBehavior"
     app:behavior_hideable="false"
-    tools:showIn="@layout/activity_forum_base"
+    tools:showIn="@layout/activity_hash_tags"
     android:background="@color/white"
     android:id="@+id/messaging_area_bottomsheet"
     app:behavior_peekHeight="50dp">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,8 +22,9 @@
         android:gravity="center"
         android:layout_gravity="top"
         android:layout_marginBottom="10dp"
-        android:background="@color/white"
-        android:orientation="vertical">
+        android:background="@color/transparent"
+        android:orientation="vertical"
+        android:visibility="visible">
 
 
         <View
@@ -58,6 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:minHeight="35dp"
+            android:baselineAligned="false"
             android:orientation="horizontal">
 
 
@@ -65,26 +70,33 @@
                 android:layout_width="0dp"
                 android:layout_weight="4.3"
                 android:scrollbars="none"
+                android:visibility="visible"
                 android:id="@+id/rtEdittextScrollview"
                 android:layout_height="wrap_content">
 
-                <com.estello.android.splashscreen.Model.RtEdittextScrollView
+                <com.estello.android.ViewModel.RtEdittextScrollView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:paddingLeft="20dp"
-                    android:layout_marginRight="3dp"
-                    android:maxHeight="150dp"
+                    android:layout_marginRight="1dp"
                     android:scrollbars="vertical"
                     android:scrollbarSize="3dp"
-                    android:layout_marginTop="2dp"
+                    android:layout_marginTop="3dp"
+                    android:textColorHighlight="#10464ed3"
                     android:id="@+id/bottom_sheet_edittext"
-                    android:textSize="@dimen/small_regular_text_size"
-                    android:inputType="textMultiLine"
-                    android:fontFamily="@font/opensansreg"
+                    android:textSize="17dp"
+                    android:lineSpacingExtra="4dp"
+                    android:inputType="text"
+                    ctr:socialFlag="hashtag|mention"
+                    ctr:hashtagColor="@color/blue"
+                    ctr:mentionColor="@color/pinkypinky"
+                    android:fontFamily="@font/airreg"
                     android:background="@drawable/transparent_background"
                     android:textColorHint="@color/dark_text_color"
-                    android:hint="Ping QandA"/>
+                    android:textColor="@color/black"
+                    android:ellipsize="end"
+                    android:hint="#TechnologyForSelfReliance"/>
             </ScrollView>
 
 
@@ -125,7 +137,8 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:gravity="center"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginRight="3dp"
+                    android:id="@+id/messaging_area_picture_select_layout_bottomsheet"
                     android:background="@drawable/light_dark_outline_circle">
 
                     <ImageView
@@ -136,36 +149,37 @@
                         android:tint="@color/dark_text_color"
                         android:src="@drawable/camera_icon"/>
                 </LinearLayout>
-                <LinearLayout
+
+                  <ImageView
+                    android:id="@+id/messaging_area_bottomsheet_file_select1"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:gravity="center"
-                    android:layout_marginRight="5dp"
-                    android:background="@drawable/light_dark_outline_circle">
-
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:tint="@color/dark_text_color"
-                        android:src="@drawable/new_mic_icon"/>
-                </LinearLayout>
-
-                <ImageView
-                    android:id="@+id/QandAEdittextFile"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginBottom="1dp"
+                    android:layout_marginRight="2dp"
                     android:padding="2dp"
-                    android:src="@drawable/file_upload"
+                    android:src="@drawable/newfileuploadicon"
                     android:tint="@color/dark_text_color" />
-
+                <include layout="@layout/record_view_bottomsheet_type1"/>
             </LinearLayout>
 
         </LinearLayout>
+
+
     </LinearLayout>
 
 
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:visibility="gone"
+        android:nestedScrollingEnabled="false"
+        android:background="@color/white"
+        android:id="@+id/bottom_sheet_attachments_recyclerview"
+        tools:listitem="@layout/messaging_area_attachment_item_type_image"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="5"/>
+
     <include layout="@layout/text_formatting_toolbar_layout"/>
+    <include layout="@layout/messaging_area_select_attachment_display_layout"/>
 
 </LinearLayout>
