--- a/app/src/main/res/layout/activity_channel_details.xml
+++ b/app/src/main/res/layout/activity_channel_details.xml
@@ -215,7 +215,7 @@
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:padding="15dp"
-                        android:tint="@color/dark_text_color"
+                        android:tint="#555454"
                         android:src="@drawable/bell_2x"/>
                 </LinearLayout>
 
@@ -294,8 +294,8 @@
                     <ImageView
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:padding="12dp"
-                        android:src="@drawable/channel_add_people"
+                        android:padding="15dp"
+                        android:src="@drawable/addfriendsi"
                         android:tint="#555454" />
                 </LinearLayout>
 
@@ -344,7 +344,8 @@
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:padding="14dp"
-                        android:src="@drawable/channel_members_list"
+                        android:layout_marginRight="5dp"
+                        android:src="@drawable/new_members_list"
                         android:tint="#555454" />
                 </LinearLayout>
 
@@ -393,10 +394,9 @@
                     <ImageView
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:padding="14dp"
-                        android:layout_marginLeft="4dp"
-                        android:src="@drawable/channel_logout"
-                        android:tint="#555454" />
+                        android:padding="15dp"
+                        android:src="@drawable/exit_1_2x"
+                        android:tint="#666666" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -427,12 +427,6 @@
 
 
             </LinearLayout>
-
-
-
-
-
-
         </LinearLayout>
     </androidx.cardview.widget.CardView>
         </LinearLayout>
