--- a/app/src/main/res/layout/channel_post_item_tool_bottomsheet.xml
+++ b/app/src/main/res/layout/channel_post_item_tool_bottomsheet.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:id="@+id/post_item__tool_bottomsheet"
-    android:layout_height="450dp">
+    android:layout_height="480dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -18,6 +18,12 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="none">
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
@@ -25,6 +31,7 @@
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="5dp"
                 android:gravity="center"
+                android:layout_gravity="center"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -40,6 +47,23 @@
                         android:layout_width="28dp"
                         android:layout_height="28dp"
                         app:lottie_rawRes="@raw/clapping"
+                        app:lottie_autoPlay="true"
+                        app:lottie_loop="true"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/light_circle"
+                    android:gravity="center">
+
+                    <com.airbnb.lottie.LottieAnimationView
+                        android:id="@+id/animationViewxLove"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        app:lottie_rawRes="@raw/xlove"
                         app:lottie_autoPlay="true"
                         app:lottie_loop="true"/>
 
@@ -112,9 +136,16 @@
                         app:lottie_loop="true"/>
 
                 </LinearLayout>
-
-
             </LinearLayout>
+            </HorizontalScrollView>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_gravity="bottom"
+                android:layout_marginTop="7dp"
+                android:background="#60A5A4A4" />
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -136,7 +167,7 @@
                         android:layout_height="23dp"
                         android:padding="2dp"
                         android:src="@drawable/pencil"
-                        android:tint="#747474" />
+                        android:tint="#6F6F6F" />
                 </LinearLayout>
 
                 <TextView
@@ -165,8 +196,8 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
                         android:padding="2dp"
                         android:src="@drawable/trash_2x"
                         android:tint="#E90E39" />
@@ -198,10 +229,11 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:src="@drawable/iconfinder_handyartboard_1_3044141"
-                        android:tint="#747474" />
+                        android:layout_width="23dp"
+                        android:layout_height="23dp"
+                        android:padding="1dp"
+                        android:src="@drawable/chat_bubble_2x"
+                        android:tint="#6F6F6F"  />
                 </LinearLayout>
 
                 <TextView
@@ -230,11 +262,44 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:padding="5dp"
-                        android:src="@drawable/iconfinder_expand_web5_20_5084642"
-                        android:tint="#747474" />
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:padding="2dp"
+                        android:src="@drawable/iconfinder_interface_12_4634389"
+                        android:tint="#6F6F6F"  />
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3"
+                    android:fontFamily="@font/airreg"
+                    android:gravity="center|left"
+                    android:text="Save Message"
+                    android:textColor="@color/black"
+                    android:textSize="17dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:weightSum="4">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.7"
+                    android:gravity="center|left"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:padding="3dp"
+                        android:src="@drawable/copy"
+                        android:tint="#6F6F6F"  />
                 </LinearLayout>
 
                 <TextView
@@ -263,11 +328,11 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:padding="5dp"
-                        android:src="@drawable/iconfinder_arrow_right_1063918"
-                        android:tint="#747474" />
+                        android:layout_width="25dp"
+                        android:layout_height="23dp"
+                        android:padding="2dp"
+                        android:src="@drawable/curved_arrow_right_2x"
+                        android:tint="#6F6F6F"/>
                 </LinearLayout>
 
                 <TextView
@@ -296,10 +361,10 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:src="@drawable/iconfinder_message_6900243"
-                        android:tint="#747474" />
+                        android:layout_width="23dp"
+                        android:layout_height="23dp"
+                        android:src="@drawable/chat_bubbles_2x"
+                        android:tint="#6F6F6F"/>
                 </LinearLayout>
 
                 <TextView
@@ -330,11 +395,11 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
                         android:rotation="270"
                         android:src="@drawable/pinned_icon"
-                        android:tint="#747474" />
+                        android:tint="#6F6F6F"/>
                 </LinearLayout>
 
                 <TextView
@@ -349,15 +414,6 @@
 
 
             </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:layout_gravity="bottom"
-                android:layout_marginTop="1dp"
-                android:background="#60A5A4A4" />
-
-
         </LinearLayout>
 
 
