--- a/app/src/main/res/layout/link_preview_layout.xml
+++ b/app/src/main/res/layout/link_preview_layout.xml
@@ -9,8 +9,8 @@
     android:weightSum="7"
     android:background="#00000000"
     android:id="@+id/link_preview_root"
-    android:layout_marginTop="10dp"
-    tools:context=".QandAChannel">
+    android:visibility="gone"
+    android:layout_marginTop="10dp">
 
     <LinearLayout
         android:layout_width="0dp"
