--- a/app/src/main/res/layout/channel_post_recyler_item.xml
+++ b/app/src/main/res/layout/channel_post_recyler_item.xml
@@ -128,6 +128,14 @@
                  app:lottie_autoPlay="true"
                  app:lottie_loop="true"/>
              <com.airbnb.lottie.LottieAnimationView
+                 android:id="@+id/animationView5"
+                 android:layout_width="20dp"
+                 android:layout_height="20dp"
+                 android:layout_marginLeft="3dp"
+                 app:lottie_rawRes="@raw/xlove"
+                 app:lottie_autoPlay="true"
+                 app:lottie_loop="true"/>
+             <com.airbnb.lottie.LottieAnimationView
                  android:layout_width="15dp"
                  android:layout_height="20dp"
                  android:layout_marginLeft="3dp"
